<resources>
    <string name="app_name">QR-Attendance</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_generate">Generate QR-code</string>
    <!-- Strings related to login -->
    <string name="prompt_matr_nr">MatrNr</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_matrNr">This matriculation number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_incorrect_login_data">This password or username is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing completions."</string>
    <string name="not_logged_in">not logged in. \nuse the login-button to sign in.</string>
    <string name="action_logout">Logout</string>

    <string name="title_activity_camera">QR-Scanner</string>
    <string name="take_picture">Take picture</string>
    <string name="logged_out">logged out. \nto sign in again, use login-button.</string>
    <string name="welcome_format">Hello: %s \npress scan-button to scan qr-code.</string>
    <string name="action_generate">Generate QR-Code</string>
    <string name="check_present">Present</string>
    <string name="btn_csv">CSV</string>
    <string name="btn_generate">Generate</string>
    <string name="hint_attendees">expected attendees</string>
    <string name="hint_date">Date</string>
    <string name="hint_lva">LVANr</string>
    <string name="format_dialog_present">Present: %d / %d</string>
</resources>
