<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mms.project.qr_attendance.ActivityMain">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="200"
        android:title="@string/action_logout"
        app:showAsAction="ifRoom"
        android:visible="false"/>
    <item
        android:id="@+id/action_generate"
        android:orderInCategory="50"
        android:title="@string/action_generate"
        app:showAsAction="ifRoom"
        android:visible="false"/>
</menu>
